# speed_benchmark

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: conf.py  index.md
docs/get_started/: changelog.md  installation.md  usage.md
speed_benchmark/: __init__.py  speed_benchmark.py
speed_benchmark/speed_benchmark/: __init__.py  speed_benchmark.py
speed_benchmark/visualization/: __init__.py  generate_color.py  line_chart.py
tests/: test_check_results.py
