[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "speed-benchmark"
dynamic = ["version"]
authors = [{ name = "shenmishajing", email = "shenmishajing@gmail.com" }]
description = "A generic speed benchmark library."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.7"
dependencies = ["numpy", "pandas", "matplotlib"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
]

[project.optional-dependencies]
dev = ["pre-commit", "commitizen"]
doc = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-book-theme",
    "sphinx-autoapi",
    "myst-parser",
    "sphinx_design",
]
build = ["build"]
test = ["tox", "pytest", "pytest-cov"]
all = ["speed-benchmark[dev,doc,build,test]"]

[project.urls]
Homepage = "https://github.com/shenmishajing/speed_benchmark"
Repository = "https://github.com/shenmishajing/speed_benchmark"
Documentation = "https://speed-benchmark.readthedocs.io"
Issues = "https://github.com/shenmishajing/speed_benchmark/issues"
Changelog = "https://github.com/shenmishajing/speed_benchmark/blob/main/docs/get_started/changelog.md"

[tool.setuptools_scm]
version_file = "speed_benchmark/version.py"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --doctest-modules --doctest-glob='*.md' --doctest-continue-on-failure"
testpaths = ["tests", "docs"]

[tool.coverage]
[tool.coverage.run]
omit = ['__init__.py', 'version.py', 'tests/*', 'docs/*', '.venv/*']

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
annotated_tag = true
version_scheme = "pep440"
version_provider = "scm"
changelog_file = "docs/get_started/changelog.md"
update_changelog_on_bump = true
